# poetry_zen

./: LICENSE  README.md  pyproject.toml  setup-pyenv-poetry.bash  tox.ini
.github/actions/install_poetry/: action.yaml
.github/workflows/: pre-merge.yaml
poetry_zen/: __init__.py  hello.py
tests/: README.md  __init__.py  test_hello.py  test_version.py
